<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start|end"
    android:background="#6B282829"
    android:fitsSystemWindows="false">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/dark_green"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:padding="15dp"
            app:cardBackgroundColor="@color/light_green"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:id="@+id/popUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="monospace"
                    android:text="@string/enforce_popUp_Text"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/enforceBtn1"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="monospace"
                        android:text="@string/enforce_first_Option"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/enforceBtn2"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:fontFamily="monospace"
                            android:text="@string/enforce_second_Option"
                            android:textColor="@color/charcoal" />

                        <Button
                            android:id="@+id/enforce3Btn"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:fontFamily="monospace"
                            android:minWidth="48dp"
                            android:text="@string/enforce_third_Option"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="start|end"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="@string/keep_Text"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:weightSum="1.0">

                        <Button
                            android:id="@+id/oneMBtn"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:backgroundTint="@color/white"
                            android:fontFamily="monospace"
                            android:text="@string/timer_first_Option"
                            android:textColor="@color/charcoal" />

                        <Button
                            android:id="@+id/fiveMBtn"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:backgroundTint="@color/white"
                            android:fontFamily="monospace"
                            android:text="@string/timer_second_Option"
                            android:textColor="@color/charcoal" />

                        <Button
                            android:id="@+id/tenMBtn"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:backgroundTint="@color/white"
                            android:fontFamily="monospace"
                            android:text="@string/timer_third_Option"
                            android:textColor="@color/charcoal" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>